--- a/main/Main.vcxproj
+++ b/main/Main.vcxproj
@@ -89,10 +89,12 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MyDriver.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyDriver.hpp" />
     <ClInclude Include="Renderer.hpp" />
+    <ClInclude Include="Utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
