--- a/main/Main.vcxproj
+++ b/main/Main.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{128FCD9F-E621-448F-BD11-375EF3FA9400}</ProjectGuid>
     <RootNamespace>Main</RootNamespace>
     <ProjectName>Main</ProjectName>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
